--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+amcl (4.7.0-2) unstable; urgency=low
+
+  (noop)
+
+ -- Zane Beckwith <zane.beckwith@xaptum.com>  Mon, 03 Feb 2020 19:44:13 +0000
+
 amcl (4.7.0-1) unstable; urgency=low
 
   * Initial release
