--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
-amcl (4.7.0-1) bionic; urgency=low
+amcl (4.7.0-2) bionic; urgency=low
+
+  (noop)
+
+ -- Zane Beckwith <zane.beckwith@xaptum.com>  Mon, 03 Feb 2020 19:44:13 +0000
+
+amcl (4.7.0-2) bionic; urgency=low
 
   * Initial release
 
- -- David R. Bild <david.bild@xaptum.com>  Fri, 06 Apr 2018 13:44:13 +0000
+ -- Zane Beckwith <david.bild@xaptum.com>  Fri, 06 Apr 2018 13:44:13 +0000
